tests/ui/struct_flatten.stderr
error: flatten is only allowed on fields
  --> $DIR/struct_flatten.rs:12:29
   |
12 | #[structopt(name = "basic", flatten)]
   |                             ^^^^^^^
